@@ -12,6 +12,7 @@ void bind_core_ndarray_numpy();
 void bind_core_array_tinyvector();
 void bind_core_array_typeinfo();
 //void bind_core_array_examples(); ///< examples
+void bind_core_array_convert();
 
 BOOST_PYTHON_MODULE(libpytorch_core_ndarray) {
   Torch::python::setup_python("Torch core classes and sub-classes for array manipulation");
@@ -21,4 +22,5 @@ BOOST_PYTHON_MODULE(libpytorch_core_ndarray) {
   bind_core_array_tinyvector();
   bind_core_array_typeinfo();
   //bind_core_array_examples(); ///< examples
+  bind_core_array_convert();
 }
